# FrameworkBenchmarks

deployment/vagrant/: Vagrantfile
frameworks/Crystal/amber/: README.md  amber.dockerfile  run.sh  sam.cr  shard.yml
frameworks/Crystal/amber/config/: application.cr  routes.cr
frameworks/Crystal/amber/config/initializers/: database.cr
frameworks/Crystal/amber/db/migrations/: 20211119124643692_create_world.cr  20211119125101584_create_fortune.cr
frameworks/Crystal/amber/src/: amber.cr
frameworks/Crystal/amber/src/controllers/: benchmark_controller.cr
frameworks/Crystal/amber/src/models/: fortune.cr  world.cr
frameworks/Rust/axum/: Cargo.toml  README.md  axum.dockerfile  benchmark_config.json
frameworks/Rust/axum-new/: README.md  benchmark_config.json
frameworks/Rust/axum/src/: database.rs  main.rs  main_mongo.rs  main_sqlx.rs  models.rs  random.rs  request.rs  server.rs
frameworks/Rust/rocket/: Cargo.toml  rocket.dockerfile
frameworks/Rust/rocket/src/: fortune.rs  main.rs  models.rs  random.rs  world.rs
