[package]
name = "rocket"
version = "0.2.0"
authors = ["Marcelo Barbosa <mbarbosa@gmail.com>", "Brendan Hansknecht <brendan.hansknecht@gmail.com>"]
edition = "2018"

[dependencies]
num_cpus = { version = "^1.13" }
rand = { version = "^0.8" }
yarte = { version = "^0.15" }
lazy_static = { version = "^1.4" }
async-stream = { version = "^0.3" }
async-trait = { version = "0.1" }
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
rocket = { version = "0.5.0-rc.1", features = [
    "json",
] }
serde = { version = "^1" }
serde_json = { version = "^1" }
serde_derive = { version = "^1" }
sea-orm = { version = "^0.3", features = [
    "macros", "runtime-tokio-native-tls"
] }

#[dependencies.rocket_contrib]
#version = "*"
#default-features = false
#features = ["json"]

[features]
default = ["sqlx-postgres"]
sqlx-mysql = ["sea-orm/sqlx-mysql"]
sqlx-postgres = ["sea-orm/sqlx-postgres"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
